fix(home): adjust overflow in main tag

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -34,9 +34,9 @@
     &::after {
         left: 100%;
         bottom: 0;
-        transform: translate(calc(var(--border--width) * -1), var(--border--width)) rotate(270deg);
-        border-top-left-radius: var(--border-radius);
-        border-bottom: 0;
+        transform: translate(calc(var(--border--width) * -1), var(--border--width));
+        border-bottom-left-radius: var(--border-radius);
+        border-top: 0;
         border-right: 0;
     }
 
