--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,10 @@ html {
     font-family: Inter, sans-serif;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 .c-container {
     @media screen and (min-width: 640px) {
         width: min(1200px, 100% - 80px);
